; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/cache/extr_relcache.c_errtablecol.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/cache/extr_relcache.c_errtablecol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_6__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @errtablecol(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call %struct.TYPE_5__* @RelationGetDescr(i32 %7)
  store %struct.TYPE_5__* %8, %struct.TYPE_5__** %5, align 8
  %9 = load i32, i32* %4, align 4
  %10 = icmp sgt i32 %9, 0
  br i1 %10, label %11, label %25

11:                                               ; preds = %2
  %12 = load i32, i32* %4, align 4
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = icmp sle i32 %12, %15
  br i1 %16, label %17, label %25

17:                                               ; preds = %11
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %19 = load i32, i32* %4, align 4
  %20 = sub nsw i32 %19, 1
  %21 = call %struct.TYPE_6__* @TupleDescAttr(%struct.TYPE_5__* %18, i32 %20)
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i8* @NameStr(i32 %23)
  store i8* %24, i8** %6, align 8
  br label %30

25:                                               ; preds = %11, %2
  %26 = load i32, i32* %3, align 4
  %27 = call i32 @RelationGetRelid(i32 %26)
  %28 = load i32, i32* %4, align 4
  %29 = call i8* @get_attname(i32 %27, i32 %28, i32 0)
  store i8* %29, i8** %6, align 8
  br label %30

30:                                               ; preds = %25, %17
  %31 = load i32, i32* %3, align 4
  %32 = load i8*, i8** %6, align 8
  %33 = call i32 @errtablecolname(i32 %31, i8* %32)
  ret i32 %33
}

declare dso_local %struct.TYPE_5__* @RelationGetDescr(i32) #1

declare dso_local i8* @NameStr(i32) #1

declare dso_local %struct.TYPE_6__* @TupleDescAttr(%struct.TYPE_5__*, i32) #1

declare dso_local i8* @get_attname(i32, i32, i32) #1

declare dso_local i32 @RelationGetRelid(i32) #1

declare dso_local i32 @errtablecolname(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
